cambios en script

--- a/parte 1.html
+++ b/parte 1.html
@@ -11,8 +11,11 @@
         let edad=39;
         let estudiante=true;
         console.log("nombre",nombre);
+        document.write("nombre", nombre);
         console.log("edad",edad);
+        document.write("edad", edad);
         console.log("estudiante",estudiante);
+        document.write("estudiante", estudiante);
     </script>
     
 </body>
