cambios de las variable division

--- a/parte 2.html
+++ b/parte 2.html
@@ -12,15 +12,15 @@
         let suma=a+b;
         let resta=a-b;
         let multi=a*b;
-        let div=a/b;
+        let division=a/b;
         console.log("suma", suma);
         document.write("suma", suma);
         console.log("resta", resta);
         document.write("resta", resta);
         console.log("multi", multi);
         document.write("multi", multi);
-        console.log("div", div);
-        document.write("div", div);
+        console.log("division", division);
+        document.write("division", division);
 
         console.log("a es mayor que b", a>b);
         document.write("a es mayor que b", a>b, "<br>");
